src/objects/Bolletta__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bollette</relationshipLabel>
        <relationshipName>Bollette</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pagato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pagato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TypeGasLuce__c</fullName>
        <label>TypeGasLuce</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Luce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>